force-app/main/default/objects/UtilityCredential__c/UtilityCredential__c.object-meta.xml
<CustomObject>
    <description
    >A custom object (created by the Urjanet Connect app) to store status information about utility credentials</description>
    <label>Utility Credential</label>
    <nameField>
        <label>Utility Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>