force-app/main/default/objects/UtilityCredential__c/fields/ArcadiaServiceProviderId__c.field-meta.xml
<CustomField>
    <fullName>ArcadiaServiceProviderId__c</fullName>
    <description>Unique Id for the Provider in Arcadia system</description>
    <inlineHelpText>Unique Id for the Provider in Arcadia system</inlineHelpText>
    <label>ArcadiaServiceProviderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>