force-app/main/default/objects/UtilityCredential__c/fields/CorrelationID__c.field-meta.xml
<CustomField>
    <fullName>CorrelationID__c</fullName>
    <description>A unique number to identify this utility credential record within Urjanet&apos;s sytem.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique number to identify this utility credential record within Urjanet&apos;s sytem.</inlineHelpText>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>