force-app/main/default/objects/UtilityCredential__c/fields/CreatedByInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>CreatedByInUrjanet__c</fullName>
    <description>The system user responsible for creating a credential.</description>
    <inlineHelpText>The system user responsible for creating a credential.</inlineHelpText>
    <label>Created By in Arcadia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>