force-app/main/default/objects/UtilityCredential__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether data will continue to be extracted behind this credential.</description>
    <inlineHelpText>Indicates whether data will continue to be extracted behind this credential.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>