force-app/main/default/objects/UtilityCredential__c/fields/LastModifiedByInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByInUrjanet__c</fullName>
    <description>The system user responsible for modifying a credential most recently.</description>
    <inlineHelpText>The system user responsible for modifying a credential most recently.</inlineHelpText>
    <label>Last Modified By in Arcadia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>