force-app/main/default/objects/UtilityCredential__c/fields/LastModifiedInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedInUrjanet__c</fullName>
    <description>The date that a credential was modified last.</description>
    <inlineHelpText>The date that a credential was modified last.</inlineHelpText>
    <label>Last Modified in Arcadia</label>
    <type>DateTime</type>
</CustomField>