force-app/main/default/objects/UtilityCredential__c/fields/LastUrjanetSyncDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastUrjanetSyncDateTime__c</fullName>
    <description>Date and Time of the last sync with Arcadia</description>
    <inlineHelpText>Date and Time of the last sync with Arcadia</inlineHelpText>
    <label>Last Arcadia Sync</label>
    <type>DateTime</type>
</CustomField>