force-app/main/default/objects/UtilityCredential__c/fields/NextScheduledRun__c.field-meta.xml
<CustomField>
    <fullName>NextScheduledRun__c</fullName>
    <description>The time that this credential is next scheduled to be ran in our system.</description>
    <inlineHelpText>The time that this credential is next scheduled to be ran in our system.</inlineHelpText>
    <label>Next Scheduled Run</label>
    <type>DateTime</type>
</CustomField>