force-app/main/default/objects/UtilityCredential__c/fields/ProviderName__c.field-meta.xml
<CustomField>
    <fullName>ProviderName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The commonly known name for the utility company.</description>
    <inlineHelpText>The commonly known name for the utility company.</inlineHelpText>
    <label>Provider Name</label>
    <referenceTo>Supplier</referenceTo>
    <relationshipLabel>Utility Credentials</relationshipLabel>
    <relationshipName>UtilityCredentials</relationshipName>
    <type>Lookup</type>
</CustomField>