force-app/main/default/objects/UtilityCredential__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
    >Credential-level statuses that let you know if there are any issues accessing the provider portal, the data, or with the credential itself.</description>
    <inlineHelpText
    >Credential-level statuses that let you know if there are any issues accessing the provider portal, the data, or with the credential itself.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>SENT_TO_URJANET</fullName>
                <label>Sent To Arcadia</label>
            </value>
            <value>
                <fullName>ACTION_REQUIRED</fullName>
                <label>Action Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>