force-app/main/default/objects/UtilityCredential__c/fields/StatusDetail__c.field-meta.xml
<CustomField>
    <fullName>StatusDetail__c</fullName>
    <description>A detailed status for the credential.</description>
    <inlineHelpText>A detailed status for the credential.</inlineHelpText>
    <label>Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>ACTION_REQUIRED</fullName>
                <label>Action Required</label>
            </value>
            <value>
                <fullName>ACCOUNT_LOCKED</fullName>
                <label>Account Locked</label>
            </value>
            <value>
                <fullName>E_BILL_REQUIRED</fullName>
                <label>E-Bill Required</label>
            </value>
            <value>
                <fullName>LOGIN_FAILURE</fullName>
                <label>Login Failure</label>
            </value>
            <value>
                <fullName>MULTIFACTOR_AUTH_FAILURE</fullName>
                <label>Multi-Factor Authentication Failure</label>
            </value>
            <value>
                <fullName>NAVIGATION_FAILURE</fullName>
                <label>Navigation Failure</label>
            </value>
            <value>
                <fullName>NO_ACCOUNTS_FOUND</fullName>
                <label>No Accounts Found</label>
            </value>
            <value>
                <fullName>NO_ACTION_REQUIRED</fullName>
                <label>No Action Required</label>
            </value>
            <value>
                <fullName>SECURITY_QUESTIONS</fullName>
                <label>Security Questions</label>
            </value>
            <value>
                <fullName>STATEMENT_UNAVAILABLE</fullName>
                <label>Statement Unavailable</label>
            </value>
            <value>
                <fullName>UNDER_REVIEW</fullName>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>UNSUPPORTED_CAPTCHA</fullName>
                <label>Unsupported CAPTCHA</label>
            </value>
            <value>
                <fullName>USER_ACTION_REQUIRED</fullName>
                <label>User Action Required</label>
            </value>
            <value>
                <fullName>WEBSITE_DOWN</fullName>
                <label>Website Down</label>
            </value>
            <value>
                <fullName>ACCOUNT_SETUP_REQUIRED</fullName>
                <label>Account Setup Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>