force-app/main/default/objects/UtilityCredential__c/fields/Username2__c.field-meta.xml
<CustomField>
    <fullName>Username2__c</fullName>
    <description>Optional parameters required by some providers to access data. The provider object will denote which fields are required for each provider.</description>
    <inlineHelpText>Optional parameters required by some providers to access data. The provider object will denote which fields are required for each provider.</inlineHelpText>
    <label>Username2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>