force-app/main/default/objects/UtilityCredential__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>CorrelationID__c</columns>
    <columns>ProviderName__c</columns>
    <columns>Username__c</columns>
    <columns>Status__c</columns>
    <columns>StatusDetail__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enabled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>