force-app/main/default/objects/UtilityCredential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CorrelationID__c</columns>
    <columns>ProviderName__c</columns>
    <columns>Username__c</columns>
    <columns>Status__c</columns>
    <columns>StatusDetail__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>