force-app/main/default/objects/UtilityCredential__c/listViews/Issues.listView-meta.xml
<ListView>
    <fullName>Issues</fullName>
    <columns>NAME</columns>
    <columns>CorrelationID__c</columns>
    <columns>ProviderName__c</columns>
    <columns>Username__c</columns>
    <columns>Status__c</columns>
    <columns>StatusDetail__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ACTION_REQUIRED</value>
    </filters>
    <label>Issues</label>
</ListView>